# geodraw_releases

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
app/: debug_goals.cpp  earth_viewer.cpp  gizmo_demo.cpp  rl_gui.cpp  rl_gui_ui.cpp  rl_gui_ui.hpp  scenario_generator.cpp  scenario_viewer.cpp  vehicle_glb_demo.cpp
data/glb_files/: cyclist.glb  pedestrian.glb
demos/: demo_add_cmd.cpp  demo_camera_trajectory.cpp  demo_editable.cpp  demo_glb_viewer.cpp  demo_hello_world.cpp  demo_imgui_panel.cpp  demo_minor_mode.cpp  demo_multiple_scenes.cpp  demo_quick_view.cpp  demo_shape_edit.cpp  demo_texture.cpp  demo_tooltip.cpp  demo_video_capture.cpp
doc/: consuming_as_vendored_library.org  plugin_system.txt
include/geodraw/app/: app.hpp  app_module.hpp  continuous_update_reasons.hpp  imgui_ctx.hpp  key.hpp
include/geodraw/camera/: camera.hpp
include/geodraw/export/: export.hpp  geodraw.hpp
include/geodraw/geometry/: colors.hpp  geometry.hpp  geometry_coords.hpp  geometry_transforms.hpp  ray.hpp  ray_intersection.hpp
include/geodraw/gizmo/: edit_proxy.hpp  editing_context.hpp  gizmo.hpp  proxy_factory.hpp  translate_gizmo.hpp
include/geodraw/graph/: graph.hpp  graph_algorithms.hpp  graph_types.hpp  lane_graph.hpp
include/geodraw/image/: image.hpp
include/geodraw/log/: log.hpp
include/geodraw/modules/camera_trajectory/: camera_trajectory_plugin.hpp
include/geodraw/modules/clustering/: marker_clusterer.hpp
include/geodraw/modules/drive/: geometry_road.hpp  geometry_road_markings.hpp  goal_assignment.hpp  scenario_plugin.hpp  scene_road.hpp  scene_trajectory.hpp  trajectory_data.hpp  trajectory_generator.hpp  trajectory_json.hpp  trajectory_render.hpp  vehicle.hpp  vehicle_generator.hpp
include/geodraw/modules/earth/: earth.hpp  earth_cache.hpp  earth_coords.hpp  earth_http.hpp  earth_pbf.hpp  earth_shape_edit.hpp  earth_tile_cover.hpp  earth_tiles.hpp  osm_to_scenario.hpp  terrain_mesh.hpp  terrain_parser.hpp  tile_provider.hpp  tile_rate_limiter.hpp
include/geodraw/modules/earth/providers/: maptiler_provider.hpp
include/geodraw/modules/geojson/: geojson.hpp
include/geodraw/modules/geometry/: polygon_utils.hpp
include/geodraw/modules/gltf/: gltf_loader.hpp
include/geodraw/modules/hdmap/: hdmap_layer.hpp  hdmap_provider.hpp  hdmap_types.hpp
include/geodraw/modules/shape/: shape_file.hpp
include/geodraw/modules/video_capture/: video_capture_plugin.hpp
include/geodraw/renderer/: irenderer.hpp  mock_renderer.hpp  renderer.hpp  text_renderer.hpp
include/geodraw/scene/: scene.hpp
include/geodraw/ui/: imgui_helpers.hpp  imgui_plugin.h  quick_view.hpp  tooltip_system.hpp
lib/linux/: libgeodraw.so.1
lib/macos/: libgeodraw.0.1.dylib  libgeodraw.1.dylib  libgeodraw.dylib
python/: CMakeLists.txt  README.md
python/app/: scenario_viewer.py
python/demos/: demo_add_cmd.py  demo_camera_trajectory.py  demo_editable.py  demo_glb_viewer.py  demo_hello_world.py  demo_imgui_panel.py  demo_minor_mode.py  demo_multiple_scenes.py  demo_quick_view.py  demo_shape_edit.py  demo_texture.py  demo_tooltip.py  demo_video_capture.py
python/geodraw/: __init__.py
python/src/: bindings.cpp
python/tests/: test_bindings.py
tests/: camera_test.cpp  clustering_test.cpp  earth_cache_test.cpp  earth_coords_test.cpp  geojson_test.cpp  image_test.cpp  inspect_glb.cpp  log_test.cpp  marching_squares_test.cpp  measure_model.cpp  shape_test.cpp  test_graph.cpp  test_lane_graph.cpp
